# sql-debug-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  fix_readme.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
server/: app.py  environment.py  homepage.html
server/db/: seed.sql
server/graders/: __init__.py
server/tasks/: __init__.py
static/: tester.html
tests/: conftest.py  test_environment.py
