[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv real-world SQL debugging and optimisation environment"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

authors = [
    { name = "Scaler Hackathon Team" }
]

keywords = ["openenv", "rl", "reinforcement-learning", "sql", "agent", "environment"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation
    "pydantic>=2.7.0",

    # HTTP client (for client.py and inference.py)
    "httpx>=0.27.0",

    # OpenAI-compatible client (mandatory per hackathon spec)
    "openai>=1.30.0",
    "openenv-core>=0.2.0",

    # Optional web UI
    "gradio>=4.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.scripts]
sql-debug-env = "server.app:main"
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
